# libcamera-rs

./: .clang-tidy  .gitignore  .gitmodules  Cargo.toml  build.rs  makefile  readme.md
libcamera-bridge/: camera.cpp  camera_configuration.cpp  camera_manager.cpp  config.cpp  control_id.cpp  control_value.cpp  core.cpp  core.hpp  fd.cpp  frame_buffer.cpp  frame_buffer_allocator.cpp  frame_buffer_plane.cpp  frame_buffers.cpp  memory_buffer.cpp  pixel_format.cpp  request.cpp  size.cpp  stream.cpp  stream_configuration.cpp
src/: bridge.rs  camera.rs  config.rs  controls.rs  error.rs  image.rs  lib.rs  prelude.rs  test.rs
src/bridge/: test.rs
