[package]
name = "libcamera-rs"
description = "Libcamera bindings for rust."
authors = ["John Brandt <johnb0@outlook.com>", "Ben Heard <benpheard@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "ISC"

[dependencies]
cxx = "1.0"
thiserror = "1"
log = "0.4"
image = { version = "0.24", optional = true }

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
lazy_static = "1"
simplelog = "0.12"

[features]
default = [ "image" ]
